@@ -1,5 +1,6 @@
 2010-11-24  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #16557: Wrong variables in tceforms_inline
 	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tceforms_fe
 	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tceforms
 	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_syntaxhl
